# GD32_Clang_CMake_template

./: .clang-format  .clangd  .gitignore  .gitmessage  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  package-lock.json  package.json  readme.md  release.config.js
.github/ISSUE_TEMPLATE/: bug_from_qa.yml
.github/PULL_REQUEST_TEMPLATE/: dev.md  release.md
.github/workflows/: release.yml
CMake/: add_libs.cmake  arm-none-eabi-gcc.cmake  create_bin.cmake  flash_by_install.cmake  set_name.cmake
Core/: CMakeLists.txt
Core/inc/: main.h
Core/src/: gd32f4xx_it.c  main.c
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/GD32F4xx_standard_peripheral/: CMakeLists.txt
Project/: MDK_PROJ.uvprojx
Scripts/OpenOCD/: openocd_jlink.cfg
Source/: CMakeLists.txt
Source/Adapter/: CMakeLists.txt
Source/Adapter/ContinuityCollector/: CMakeLists.txt  ContinuityCollector.cpp  ContinuityCollector.h
Source/Adapter/Logger/: CMakeLists.txt  LogManager.cpp  LogManager.h  Logger.cpp  Logger.h  README.md
Source/Adapter/TaskManager/: CMakeLists.txt  README.md  TaskManager.cpp  TaskManager.hpp
Source/Adapter/adapter_cx310/: CMakeLists.txt  CX310.hpp  uwb_interface.hpp
Source/Adapter/adapter_gpio/: CMakeLists.txt  GpioFactory.cpp  GpioFactory.h  HardwareGpio.cpp  HardwareGpio.h  README.md  VirtualGpio.cpp  VirtualGpio.h  gpio_example.cpp  gpio_example.hpp
Source/Adapter/adapter_input/: CMakeLists.txt  InputAdapter.cpp  InputAdapter.h
Source/Adapter/adapter_led/: CMakeLists.txt  LedAdapter.cpp  LedAdapter.h  LedFactory.cpp  LedFactory.h  README.md
Source/Adapter/enet/: CMakeLists.txt  netconf.cpp  netconf.h
Source/BSP/: CMakeLists.txt
Source/BSP/inc/: bsp_adc.hpp  bsp_led.hpp  bsp_log.h  bsp_log.hpp  bsp_spi.hpp  bsp_uart.h  bsp_uart.hpp  bsp_uid.hpp
Source/BSP/src/: bsp_log.cpp  bsp_uart.cpp
Source/Config/: CMakeLists.txt  FreeRTOSConfig.h
Source/Config/FreeRTOSConfig/: CMakeLists.txt  FreeRTOSConfig.h
Source/Config/gd32f4xx_libopt/: CMakeLists.txt
Source/Config/lwipopts/: CMakeLists.txt  lwipopts.h
Source/Config/netcfg/: CMakeLists.txt
Source/Core/: CMakeLists.txt  cx310.hpp  freertos.c  gd32f4xx_it.c  main.c  main.cpp  tag_uwb_protocol.hpp
Source/Core/CMSIS/: CMakeLists.txt
Source/Core/Enet/: gd32f4xx_enet_eval.cpp  gd32f4xx_enet_eval.h  hello_gigadevice.cpp  hello_gigadevice.h  lwipopts.h  netconf.cpp  netconf.h  tcp_client.cpp  tcp_client.h  udp_echo.cpp  udp_echo.h
Source/Core/dw1000/: CMakeLists.txt  dw1000.hpp
Source/Core/include/: main.h
Source/Core/uwb/uci/: cx_uci.hpp
Source/Core/uwb/uwb/: cx_uwb_test.hpp  uwb.hpp
Source/Drivers/: CMakeLists.txt
Source/Drivers/CX310/: CMakeLists.txt  cx310.hpp  tag_uwb_protocol.hpp
Source/Drivers/DW1000/decadriver/: deca_device_api.h
Source/Drivers/GD32F4xx_standard_peripheral/: CMakeLists.txt
Source/Drivers/GD32F4xx_standard_peripheral/Source/: gd32f4xx_enet.c
Source/HAL/: CMakeLists.txt
Source/HAL/button/: CMakeLists.txt  button.cpp  button.h
Source/HAL/dw1000/: CMakeLists.txt  dw1000.hpp  dw1000_example.cpp
Source/HAL/dw1000/decadriver/: deca_regs.h
Source/HAL/dw1000/platform/: deca_spi.c
Source/HAL/enet/: CMakeLists.txt  enet_hal.cpp
Source/HAL/exti/: CMakeLists.txt  hal_exti.cpp
Source/HAL/gpio/: CMakeLists.txt  hal_gpio.hpp
Source/HAL/spi/: CMakeLists.txt  hal_spi.cpp  hal_spi.hpp
Source/HAL/timer/: CMakeLists.txt  README.md  hal_hptimer.cpp  hal_hptimer.hpp  hptimer.h
Source/HAL/uart/: CMakeLists.txt  hal_uart.cpp  hal_uart.hpp
Source/HAL/uid/: CMakeLists.txt
Source/Middlewares/: CMakeLists.txt
Source/Middlewares/FreeRTOS/Source/: CMakeLists.txt
Source/Middlewares/lwip-2.1.2/: CMakeLists.txt
Source/Retarget/: CMakelists.txt
Source/app/: CMakeLists.txt  freertos.c  gd32f4xx_it.c  main.cpp  mode_entry.h
Source/app/slave_main/: CMakeLists.txt  SlaveDevice.cpp  SlaveDevice.h  slave_mode.cpp
Source/interface/: CMakeLists.txt  IButton.hpp  ILed.hpp
tool/xpack-openocd-0.11.0-3/distro-info/scripts/: host-defs-source.sh
tool/xpack-openocd-0.11.0-3/share/doc/info/: openocd.info  openocd.info-1  openocd.info-2
